--- a/tournaments-events.html
+++ b/tournaments-events.html
@@ -555,9 +555,11 @@
                         </div>
                         <div class="bottom">
                             <div class="text">
-                                To register for a tournament, visit the specific event’s page and click on the
-                                registration link.
-                                Fill out the online registration form and submit it.
+                                <p>
+                                    To register for a tournament, visit the specific event’s page and click on the
+                                    registration link.
+                                    Fill out the online registration form and submit it.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -573,13 +575,15 @@
                         </div>
                         <div class="bottom">
                             <div class="text">
-                                Entry fees vary depending on the tournament. Please refer to the event details on the
-                                Tournaments and Events page for the specific fee for each event.                                
+                                <p>
+                                    Entry fees vary depending on the tournament. Please refer to the event details on the
+                                    Tournaments and Events page for the specific fee for each event.
+                                </p>                 
                             </div>
                         </div>
                     </div>
 
-                    
+
                     <div class="accordion">
                         <div class="top">
                             <div class="text">
@@ -591,9 +595,12 @@
                         </div>
                         <div class="bottom">
                             <div class="text">
-                                Eligibility requirements differ by tournament. Most events will specify age limits, skill levels,
-                                or membership requirements. Check the details for each tournament on the event page to
-                                ensure you meet the criteria.                                                              
+                                <p>
+                                    Eligibility requirements differ by tournament. Most events will specify age limits,
+                                    skill levels,
+                                    or membership requirements. Check the details for each tournament on the event page to
+                                    ensure you meet the criteria.
+                                </p>                             
                             </div>
                         </div>
                     </div>
@@ -609,9 +616,11 @@
                         </div>
                         <div class="bottom">
                             <div class="text">
-                                Yes, but please notify us as soon as possible. Refunds for withdrawal are subject to the
-                                tournament’s refund policy, which can be found on the event page or by contacting us
-                                directly.                                                           
+                                <p>
+                                    Yes, but please notify us as soon as possible. Refunds for withdrawal are subject to the
+                                    tournament’s refund policy, which can be found on the event page or by contacting us
+                                    directly.
+                                </p>                          
                             </div>
                         </div>
                     </div>
@@ -627,9 +636,11 @@
                         </div>
                         <div class="bottom">
                             <div class="text">
-                                Each tournament has its own format, which is detailed on the respective event page.
-                                Common formats include knockout stages, round-robin groups, and double-elimination.
-                                Check the specific format for each tournament before registering.                                                       
+                                <p>
+                                    Each tournament has its own format, which is detailed on the respective event page.
+                                    Common formats include knockout stages, round-robin groups, and double-elimination.
+                                    Check the specific format for each tournament before registering.
+                                </p>                      
                             </div>
                         </div>
                     </div>
@@ -637,7 +648,7 @@
                     <div class="accordion">
                         <div class="top">
                             <div class="text">
-                                How are prizes awarded? 
+                                How are prizes awarded?
                             </div>
                             <img src="https://assets-global.website-files.com/63e49089cb05f507aba64457/63e49089cb05f5c614a6446a_icon_plus.svg"
                                 alt="">
@@ -645,9 +656,11 @@
                         </div>
                         <div class="bottom">
                             <div class="text">
-                                Prizes are awarded based on the tournament’s structure. Details on the prize pool and
-                                distribution can be found on the event page. Generally, prizes are awarded to the top
-                                finishers according to the event's rules.                                                                                   
+                                <p>
+                                    Prizes are awarded based on the tournament’s structure. Details on the prize pool and
+                                    distribution can be found on the event page. Generally, prizes are awarded to the top
+                                    finishers according to the event's rules.
+                                </p>                          
                             </div>
                         </div>
                     </div>
@@ -663,8 +676,12 @@
                         </div>
                         <div class="bottom">
                             <div class="text">
-                                Tournaments are held at our club or designated venues. Venue details, including location,
-                                parking, and accessibility information, are provided on the event page for each tournament.                                                                               
+                                <p>
+                                    Tournaments are held at our club or designated venues. Venue details, including
+                                    location,
+                                    parking, and accessibility information, are provided on the event page for each
+                                    tournament.
+                                </p>                        
                             </div>
                         </div>
                     </div>
@@ -680,9 +697,12 @@
                         </div>
                         <div class="bottom">
                             <div class="text">
-                                Players should bring their own snooker cues and any personal equipment. We provide the
-                                tables and other necessary equipment. Check the event details for any additional
-                                requirements or recommendations.                                                                             
+                                <p>
+                                     Players should bring their own snooker cues and any personal equipment. We provide
+                                    the
+                                    tables and other necessary equipment. Check the event details for any additional
+                                    requirements or recommendations.
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -698,9 +718,12 @@
                         </div>
                         <div class="bottom">
                             <div class="text">
-                                Each tournament may have specific rules and regulations, which are detailed on the event
-                                page. Make sure to review these rules before participating to ensure you are familiar with the
-                                tournament’s guidelines.                                                                                                          
+                                <p>
+                                    Each tournament may have specific rules and regulations, which are detailed on the event
+                                    page. Make sure to review these rules before participating to ensure you are familiar
+                                    with the
+                                    tournament’s guidelines.
+                                </p>                   
                             </div>
                         </div>
                     </div>
@@ -716,9 +739,13 @@
                         </div>
                         <div class="bottom">
                             <div class="text">
-                                If you are interested in volunteering or sponsoring a tournament, please contact us via email
-                                at <a href="mailto:info@q-snooker.com">info@q-snooker.com.</a>We welcome support and would be happy to provide more
-                                information on these opportunities.                                                                                                          
+                                <p>
+                                    If you are interested in volunteering or sponsoring a tournament, please contact us via
+                                    email
+                                    at <a href="mailto:info@q-snooker.com">info@q-snooker.com.</a>We welcome support and
+                                    would be happy to provide more
+                                    information on these opportunities.
+                                </p>                
                             </div>
                         </div>
                     </div>
