--- a/tournaments-events.html
+++ b/tournaments-events.html
@@ -23,8 +23,8 @@
                 </div>
                 <div class="main-navbar">
                     <ul>
-                        <li><a class="active" href="./">Home</a></li>
-                        <li><a href="tournaments-events">Tournaments and Events</a></li>
+                        <li><a href="./">Home</a></li>
+                        <li><a class="active" href="tournaments-events">Tournaments and Events</a></li>
                         <li><a href="membership-information">Membership Information</a></li>
                         <li><a href="about-us">About Us</a></li>
                         <li><a class="desktop-hide contact-us-btn butn" href="contact-us">Contact Us</a></li>
@@ -576,9 +576,10 @@
                         <div class="bottom">
                             <div class="text">
                                 <p>
-                                    Entry fees vary depending on the tournament. Please refer to the event details on the
+                                    Entry fees vary depending on the tournament. Please refer to the event details on
+                                    the
                                     Tournaments and Events page for the specific fee for each event.
-                                </p>                 
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -598,9 +599,10 @@
                                 <p>
                                     Eligibility requirements differ by tournament. Most events will specify age limits,
                                     skill levels,
-                                    or membership requirements. Check the details for each tournament on the event page to
+                                    or membership requirements. Check the details for each tournament on the event page
+                                    to
                                     ensure you meet the criteria.
-                                </p>                             
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -617,10 +619,11 @@
                         <div class="bottom">
                             <div class="text">
                                 <p>
-                                    Yes, but please notify us as soon as possible. Refunds for withdrawal are subject to the
+                                    Yes, but please notify us as soon as possible. Refunds for withdrawal are subject to
+                                    the
                                     tournament’s refund policy, which can be found on the event page or by contacting us
                                     directly.
-                                </p>                          
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -640,7 +643,7 @@
                                     Each tournament has its own format, which is detailed on the respective event page.
                                     Common formats include knockout stages, round-robin groups, and double-elimination.
                                     Check the specific format for each tournament before registering.
-                                </p>                      
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -657,10 +660,12 @@
                         <div class="bottom">
                             <div class="text">
                                 <p>
-                                    Prizes are awarded based on the tournament’s structure. Details on the prize pool and
-                                    distribution can be found on the event page. Generally, prizes are awarded to the top
+                                    Prizes are awarded based on the tournament’s structure. Details on the prize pool
+                                    and
+                                    distribution can be found on the event page. Generally, prizes are awarded to the
+                                    top
                                     finishers according to the event's rules.
-                                </p>                          
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -681,7 +686,7 @@
                                     location,
                                     parking, and accessibility information, are provided on the event page for each
                                     tournament.
-                                </p>                        
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -698,7 +703,7 @@
                         <div class="bottom">
                             <div class="text">
                                 <p>
-                                     Players should bring their own snooker cues and any personal equipment. We provide
+                                    Players should bring their own snooker cues and any personal equipment. We provide
                                     the
                                     tables and other necessary equipment. Check the event details for any additional
                                     requirements or recommendations.
@@ -719,11 +724,13 @@
                         <div class="bottom">
                             <div class="text">
                                 <p>
-                                    Each tournament may have specific rules and regulations, which are detailed on the event
-                                    page. Make sure to review these rules before participating to ensure you are familiar
+                                    Each tournament may have specific rules and regulations, which are detailed on the
+                                    event
+                                    page. Make sure to review these rules before participating to ensure you are
+                                    familiar
                                     with the
                                     tournament’s guidelines.
-                                </p>                   
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -740,12 +747,13 @@
                         <div class="bottom">
                             <div class="text">
                                 <p>
-                                    If you are interested in volunteering or sponsoring a tournament, please contact us via
+                                    If you are interested in volunteering or sponsoring a tournament, please contact us
+                                    via
                                     email
                                     at <a href="mailto:info@q-snooker.com">info@q-snooker.com.</a>We welcome support and
                                     would be happy to provide more
                                     information on these opportunities.
-                                </p>                
+                                </p>
                             </div>
                         </div>
                     </div>
