--- a/membership-information.html
+++ b/membership-information.html
@@ -25,8 +25,8 @@
                     <ul>
                         <li><a href="./">Home</a></li>
                         <li><a href="tournaments-events">Tournaments and Events</a></li>
-                        <li><a href="membership-information">Membership Information</a></li>
-                        <li><a class="active" href="about-us">About Us</a></li>
+                        <li><a class="active" href="membership-information">Membership Information</a></li>
+                        <li><a  href="about-us">About Us</a></li>
                         <li><a class="desktop-hide contact-us-btn butn" href="contact-us">Contact Us</a></li>
                     </ul>
                     <div class="close-icon"><i class="fa-solid fa-x"></i></div>
