--- a/contact-us.html
+++ b/contact-us.html
@@ -45,7 +45,7 @@
     </header>
     <!-- Header End -->
 
-    <!--About Us Page Banner Section  Start -->
+    <!--Contact Us Page Banner Section  Start -->
     <section class="banner">
         <div class="banner-image pages-banner-image">
             <img src="./assets/images/about-banner-image.jpg" alt="image">
@@ -56,10 +56,10 @@
             </div>
         </div>
     </section>
-    <!--About Us Banner Section  End-->
+    <!--Contact Us Banner Section  End-->
 
 
-    <!-- About Us Page Intro Section Start -->
+    <!-- Contact Us Page Intro Section Start -->
     <div class="pages-intro-text-section py-5">
         <div class="container">
             <div class="pages-intro-text-wrapper text-center">
@@ -71,83 +71,118 @@
             </div>
         </div>
     </div>
-    <!-- About Us Page Intro  Section End-->
+    <!-- Contact Us Page Intro  Section End-->
 
-    <!-- About Us Content Section Start -->
+    <!-- Contact Us Content Section Start -->
     <section class="sub-pages-content-section py-5">
         <div class="container">
             <div class="sub-pages-content-wrapper">
 
                 <div class="sub-pages-group">
                     <h3>
-                        Our Story
+                        Comment nous joindre :
                     </h3>
-                    <p>
-                        Founded in 1976, Q-Snooker has proudly upheld a tradition of excellence and hospitality.
-                        Our family’s passion for snooker and commitment to quality service have been the driving
-                        forces behind our success. What began as a small venture has grown into a beloved hub for
-                        snooker players from near and far.
-                    </p>
+                    <ul>
+                        <li>
+                            <p>
+                                <span class="heading-like">
+                                    Email :
+                                </span>
+                                Pour toute question générale, retour d'expérience ou demande d'assistance,
+                                contactez-nous à <a href="mailto:info@fantasiquesport.com">info@fantasiquesport.com</a>
+                                Nous nous efforçons de répondre à tous les e-mails sous 48 heures.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <span class="heading-like">
+                                    Réseaux sociaux :
+                                </span>
+                                Restez connectés avec nous sur les réseaux sociaux! Suivez-nous pour des mises à jour,
+                                des conseils, et les dernières actualités du monde des sports fantastiques.
+                            </p>
+                            <ul>
+                                <li>
+                                    <p>
+                                        <span class="heading-like">
+                                            Twitter :
+                                        </span>
+                                        <a href="@FantasiqueSport">@FantasiqueSport</a>
+                                    </p>
+                                </li>
+                                <li>
+                                    <p>
+                                        <span class="heading-like">
+                                            Facebook :
+                                        </span>
+                                        <a href="facebook.com/FantasiqueSport">facebook.com/FantasiqueSport</a>
+                                    </p>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <p>
+                                <span class="heading-like">
+                                    Commentaires :
+                                </span>
+                                Vous avez des suggestions ou des remarques sur notre plateforme? N’hésitez pas à
+                                partager vos idées avec nous. Nous cherchons toujours à améliorer Fantasique Sport pour
+                                en faire la meilleure ressource pour les fans de sports fantastiques comme vous.
+                            </p>
+                        </li>
+                    </ul>
+
+                    <div class="form-section py-5">
+                        <div class="form-image">
+                            <img src="./assets/images/contact-form-image.jpg" alt="image">
+                        </div>
+                        <div class="form-container">
+                            <div class="form-wrapper">
+                                <form class="contact-form">
+                                    <div class="formbold-mb-5">
+                                        <input type="text" name="name" id="name" placeholder="Enter Your Name"
+                                            class="formbold-form-input" />
+                                    </div>
+
+                                    <div class="formbold-mb-5">
+                                        <input type="email" name="email" id="email" placeholder="Enter Your Email"
+                                            class="formbold-form-input" />
+                                    </div>
+                                    <div class="formbold-mb-5">
+                                        <input type="text" name="subject" id="subject" placeholder="Enter Subject"
+                                            class="formbold-form-input" />
+                                    </div>
+
+                                    <div class="formbold-mb-5">
+                                        <textarea rows="6" name="message" id="message" placeholder="Your Message"
+                                            class="formbold-form-input"></textarea>
+                                    </div>
+                                    <div>
+                                        <button class="formbold-btn">Submit <i
+                                                class="fa-solid fa-paper-plane submit-icon"></i></button>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
 
                 <div class="sub-pages-group">
                     <h3>
-                        Our Mission
-                    </h3>
-
-                    <p>
-                        At Q-Snooker, our mission is to create a friendly and supportive environment where snooker
-                        players can thrive. If you’re a seasoned pro or a newcomer to the game, we strive to offer
-                        top-notch facilities, engaging events, and a strong sense of community.
-                    </p>
-                </div>
-
-                <div class="sub-pages-group">
-                    <h3>
-                        Our Facilities
+                        Nous sommes là pour vous !
                     </h3>
                     <p>
-                        Our club features state-of-the-art snooker tables and comfortable lounge areas, designed to
-                        enhance your playing experience. From casual games to competitive tournaments, we
-                        provide the perfect setting for all your snooker needs. We also offer access to our exclusive
-                        club lounge and a range of amenities to ensure your time with us is enjoyable.
-                    </p>
-                </div>
-
-                <div class="sub-pages-group">
-                    <h3>
-                        Community and Tradition
-                    </h3>
-                    <p>
-                        As a family-owned business, we value the close-knit relationships we’ve built with our
-                        members and the broader community. We’re proud to support local events and initiatives,
-                        and our long-standing presence on Vancouver Island reflects our commitment to giving back.
-                    </p>
-                </div>
-
-                <div class="sub-pages-group">
-                    <h3>
-                        Join Us
-                    </h3>
-                    <p>
-                        We invite you to become part of our story. Whether you’re looking to join a tournament, enjoy
-                        a casual game, or simply connect with fellow snooker enthusiasts, Q-Snooker is the place
-                        for you. Come and experience the warmth and camaraderie that have defined our club for
-                        years.
-                    </p>
-                    <p>
-                        Thank you for being a part of our journey. We look forward to welcoming you to Q-Snooker!
-                    </p>
-                    <p>
-                        For more information or to get in touch with us, please email <a
-                            href="mailto:info@q-snooker.com">info@q-snooker.com</a>
+                        Que vous soyez un vétéran des sports fantastiques ou que vous débutiez, notre équipe est dédiée
+                        à vous aider à profiter pleinement de votre expérience. N’hésitez pas à nous contacter—nous
+                        serons toujours ravis de vous aider.
                     </p>
                 </div>
 
             </div>
         </div>
     </section>
-    <!-- About Us Content Section End -->
+    <!-- Contact Us Content Section End -->
 
     <!-- Footer Start -->
     <footer class="footer pt-5">
@@ -184,10 +219,14 @@
                     <h3>Links</h3>
                     <ul>
                         <li><a href="./"><i class="fa-solid fa-angles-right footer-arrow"></i>Home</a></li>
-                        <li><a href="privacy-policy"><i class="fa-solid fa-angles-right footer-arrow"></i>Privacy Policy</a></li>
-                        <li><a href="personal-information"><i class="fa-solid fa-angles-right footer-arrow"></i>Personal Information Policy</a></li>
-                        <li><a href="return-refunds"><i class="fa-solid fa-angles-right footer-arrow"></i>Refunds and Returns Policy</a></li>
-                        <li><a href="terms-conditions"><i class="fa-solid fa-angles-right footer-arrow"></i>Terms & Conditions</a></li>
+                        <li><a href="privacy-policy"><i class="fa-solid fa-angles-right footer-arrow"></i>Privacy
+                                Policy</a></li>
+                        <li><a href="personal-information"><i class="fa-solid fa-angles-right footer-arrow"></i>Personal
+                                Information Policy</a></li>
+                        <li><a href="return-refunds"><i class="fa-solid fa-angles-right footer-arrow"></i>Refunds and
+                                Returns Policy</a></li>
+                        <li><a href="terms-conditions"><i class="fa-solid fa-angles-right footer-arrow"></i>Terms &
+                                Conditions</a></li>
                     </ul>
                 </div>
             </div>
