--- a/contact-us.html
+++ b/contact-us.html
@@ -64,9 +64,11 @@
         <div class="container">
             <div class="pages-intro-text-wrapper text-center">
                 <p>
-                    Welcome to Q-Snooker, a cherished family-owned snooker club nestled in the heart of
-                    Vancouver Island. For decades, we’ve been a cornerstone of the local community, dedicated
-                    to fostering a love for snooker and providing a welcoming space for enthusiasts of all ages.
+                    We’re here to assist you with any questions or inquiries you may have about our club,
+                    memberships, tournaments, or events. As a family-owned business, we value clear and
+                    prompt communication with our members and potential members. Since we primarily use
+                    email for all communications, please feel free to reach out to us through the contact details
+                    provided below.
                 </p>
             </div>
         </div>
@@ -80,58 +82,66 @@
 
                 <div class="sub-pages-group">
                     <h3>
-                        Comment nous joindre :
+                        Email Us
                     </h3>
+                    <p>
+                        For any questions regarding:
+                    </p>
                     <ul>
                         <li>
                             <p>
                                 <span class="heading-like">
-                                    Email :
+                                    Membership Information:
                                 </span>
-                                Pour toute question générale, retour d'expérience ou demande d'assistance,
-                                contactez-nous à <a href="mailto:info@fantasiquesport.com">info@fantasiquesport.com</a>
-                                Nous nous efforçons de répondre à tous les e-mails sous 48 heures.
+                                Whether you need details about our various membership
+                                options or the benefits included.
                             </p>
                         </li>
                         <li>
                             <p>
                                 <span class="heading-like">
-                                    Réseaux sociaux :
+                                    Tournaments and Events:
                                 </span>
-                                Restez connectés avec nous sur les réseaux sociaux! Suivez-nous pour des mises à jour,
-                                des conseils, et les dernières actualités du monde des sports fantastiques.
+                                Inquiries about upcoming tournaments, registration
+                                details, or event schedules.
                             </p>
-                            <ul>
-                                <li>
-                                    <p>
-                                        <span class="heading-like">
-                                            Twitter :
-                                        </span>
-                                        <a href="@FantasiqueSport">@FantasiqueSport</a>
-                                    </p>
-                                </li>
-                                <li>
-                                    <p>
-                                        <span class="heading-like">
-                                            Facebook :
-                                        </span>
-                                        <a href="facebook.com/FantasiqueSport">facebook.com/FantasiqueSport</a>
-                                    </p>
-                                </li>
-                            </ul>
                         </li>
                         <li>
                             <p>
                                 <span class="heading-like">
-                                    Commentaires :
+                                    General Queries:
                                 </span>
-                                Vous avez des suggestions ou des remarques sur notre plateforme? N’hésitez pas à
-                                partager vos idées avec nous. Nous cherchons toujours à améliorer Fantasique Sport pour
-                                en faire la meilleure ressource pour les fans de sports fantastiques comme vous.
+                                Any other questions or feedback you might have about our
+                                facilities or services.
                             </p>
                         </li>
                     </ul>
+                    <p>
+                        <span class="heading-like">
+                            Email:
+                        </span>
+                        info@q-snooker.com
+                    </p>
+                    <p>
+                        We strive to respond to all emails within [specific timeframe, e.g., 24-48 hours] to ensure you
+                        get the information you need as quickly as possible.
+                    </p>
+                </div>
 
+                <div class="sub-pages-group">
+                    <h3>
+                        Visit Us
+                    </h3>
+                    <p>
+                        If you’re in the Courtenay area, we’d love for you to visit our club in person. Here’s where
+                        you can find us:
+                    </p>
+                    <p>
+                        <span class="heading-like">Address:</span>2355 Mansfield Dr <br>Courtenay, BC V9N 2M2 <br>Canada
+                    </p>
+                </div>
+
+                <div class="sub-pages-group">
                     <div class="form-section py-5">
                         <div class="form-image">
                             <img src="./assets/images/contact-form-image.jpg" alt="image">
@@ -165,20 +175,25 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
 
+
+
                 <div class="sub-pages-group">
-                    <h3>
-                        Nous sommes là pour vous !
-                    </h3>
                     <p>
-                        Que vous soyez un vétéran des sports fantastiques ou que vous débutiez, notre équipe est dédiée
-                        à vous aider à profiter pleinement de votre expérience. N’hésitez pas à nous contacter—nous
-                        serons toujours ravis de vous aider.
+                        Feel free to stop by to tour our facilities, meet our team, or discuss membership options
+                        face-to-face. Our friendly staff will be happy to show you around and answer any questions
+                        you might have.
                     </p>
                 </div>
 
+                <div class="sub-pages-group">
+                    <p>
+                        Thank you for your interest in Q-Snooker. We look forward to hearing from you and
+                        welcoming you to our snooker community!
+                    </p>
+                </div>
+                
             </div>
         </div>
     </section>
