--- a/contact-us.html
+++ b/contact-us.html
@@ -121,7 +121,7 @@
                         <span class="heading-like">
                             Email:
                         </span>
-                        info@q-snooker.com
+                       <a href="mailto:info@q-snooker.com">info@q-snooker.com</a> 
                     </p>
                     <p>
                         We strive to respond to all emails within [specific timeframe, e.g., 24-48 hours] to ensure you
