--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <li><a href="tournaments-events">Tournaments and Events</a></li>
                         <li><a href="membership-information">Membership Information</a></li>
                         <li><a href="about-us">About Us</a></li>
-                        <li><a class="desktop-hide contact-us-btn butn" href="contact-us">Contact Us</a></li>
+                        <li><a class="desktop-hide butn" href="contact-us">Contact Us</a></li>
                     </ul>
                     <div class="close-icon"><i class="fa-solid fa-x"></i></div>
                 </div>
@@ -389,7 +389,7 @@
     <!-- Disclaimer Section End -->
 
         <!-- Footer Start -->
-        <footer class="footer pt-5">
+        <footer class="footer">
             <div class="container">
 
                 <div class="footer-map pb-5">
